--- a/app/app/src/main/res/layouts/grupos/layout/card_grupo.xml
+++ b/app/app/src/main/res/layouts/grupos/layout/card_grupo.xml
@@ -23,7 +23,7 @@
             android:layout_margin="10dp"/>
 
         <TextView
-            android:id="@+id/tamañoTextView"
+            android:id="@+id/cantidadTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="10"
