--- a/app/app/src/main/res/layouts/inicio/layout/activity_inicio.xml
+++ b/app/app/src/main/res/layouts/inicio/layout/activity_inicio.xml
@@ -18,14 +18,13 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_container"
+        android:name="com.afundacion.lockedandsecure.grupos.ListaGrupos"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-    </androidx.fragment.app.FragmentContainerView>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
@@ -34,5 +33,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/menu_drawer"/>
+        app:labelVisibilityMode="unlabeled"
+        app:menu="@menu/menu_drawer" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
