--- a/app/app/src/main/res/layouts/registro/layout/activity_registro.xml
+++ b/app/app/src/main/res/layouts/registro/layout/activity_registro.xml
@@ -77,7 +77,7 @@
                 android:id="@+id/repetirContraseñaTextInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint= "Repetir contraseña"
+                android:hint= "@string/repetir_contraseña"
                 android:inputType="textPassword"
                 android:maxLines="1" />
 
@@ -100,7 +100,7 @@
                 android:id="@+id/nombreTextInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Nombre"
+                android:hint="@string/nombre"
                 android:inputType="text"
                 android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -122,7 +122,7 @@
                 android:id="@+id/apellido1TextInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Primer apellido"
+                android:hint="@string/apellido1"
                 android:inputType="text"
                 android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -144,7 +144,7 @@
                 android:id="@+id/apellido2TextInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Segundo apellido"
+                android:hint="@string/apellido2"
                 android:inputType="text"
                 android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -152,13 +152,13 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/registrarBoton"
             android:layout_width="0dp"
-            android:layout_height="46dp"
+            android:layout_height="48dp"
             app:layout_constraintStart_toStartOf="@+id/emailTextInputLayout"
             app:layout_constraintEnd_toEndOf="@+id/emailTextInputLayout"
             app:layout_constraintTop_toBottomOf="@+id/apellido2TextInputLayout"
             android:layout_marginTop="30dp"
             android:backgroundTint="?attr/colorPrimary"
-            android:text="Registrarme"
+            android:text="@string/registrarme"
             android:textColor="@color/white"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
