--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -18,4 +18,7 @@
     <color name="grey">#808080</color>
     <color name="grey_200">#0D808080</color>
     <color name="grey_500">#4D808080</color>
+
+    <color name="azul">#2450ae</color>
+    <color name="azul_oscuro">#2b24ad</color>
 </resources>
